# Physics-based_Animation_2021S

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  buildtasks.yml  ubuntu.yml  windows.yml
doc/: setup_eigen.md  setup_glfw copy.md  setup_glfw.md  submit.md
task0/: CMakeLists.txt  README.md  main.cpp
task1/: CMakeLists.txt  README.md  main.cpp
task10/: CMakeLists.txt  README.md  main.cpp
task11/: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
task12/: README.md
task2/: CMakeLists.txt  README.md  main.cpp
task3/: CMakeLists.txt  README.md  main.cpp
task4/: CMakeLists.txt  README.md  main.cpp
task5/: CMakeLists.txt  README.md  main.cpp
task6/: CMakeLists.txt  README.md  main.cpp
task7/: CMakeLists.txt  README.md  main.cpp
task8/: README.md  main.cpp
task9/: CMakeLists.txt  README.md  main.cpp
